@@ -1,3 +1,10 @@
+Thu Oct  7 12:34:20 UTC 2010  Olli Savia  <ops@iki.fi>
+
+        * ASNMP/tests/Counter64_Test.cpp:
+        * ace/ETCL/ETCL_Constraint.cpp:
+        * ace/Monitor_Control/CPU_Load_Monitor.cpp:
+          Use ACE::is_equal() to compare floating point values.
+
 Tue Oct  5 07:23:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ACE-INSTALL.html:
